--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>Ratz</artifactId>
+    <artifactId>MyRatz</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -41,7 +41,7 @@
     </dependencies>
 
     <build>
-        <finalName>Ratz</finalName>
+        <finalName>MyRatz</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
